--- a/app/src/main/res/layout/activity_login_usuario.xml
+++ b/app/src/main/res/layout/activity_login_usuario.xml
@@ -31,6 +31,11 @@
         android:text="Ingresar"
         />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btn_sign_in_google_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
